# boom-cpp-microservices-refactoring

./: MICROSERVICES_REFACTORING_PLAN.md  POC_ASSESSMENT.md  README.md
microservices/glm-service/: CMakeLists.txt  Dockerfile  README.md
microservices/glm-service/src/: main.cpp
microservices/glm-service/src/api/: glm_handler.cpp  glm_handler.hpp
microservices/glm-service/src/core/: glm_base.cpp  glm_base.hpp
microservices/glm-service/src/core/diagnostics/: regression_diagnostics.cpp  regression_diagnostics.hpp
microservices/glm-service/src/core/models/: linear_regression.cpp  linear_regression.hpp  logistic_regression.cpp  logistic_regression.hpp  poisson_regression.cpp  poisson_regression.hpp  probit_regression.cpp  probit_regression.hpp
microservices/glm-service/src/utils/: data_preprocessor.cpp  data_preprocessor.hpp
microservices/linalg-service/: CMakeLists.txt  Dockerfile  README.md
microservices/linalg-service/src/: main.cpp
microservices/linalg-service/src/api/: linalg_handler.cpp  linalg_handler.hpp
microservices/linalg-service/src/core/: decompositions.cpp  decompositions.hpp  matrix_operations.cpp  matrix_operations.hpp  solvers.cpp  solvers.hpp
microservices/linalg-service/src/utils/: matrix_converter.cpp  matrix_converter.hpp
microservices/mcmc-service/: CMakeLists.txt  Dockerfile  README.md
microservices/mcmc-service/src/: main.cpp
microservices/mcmc-service/src/api/: mcmc_handler.cpp  mcmc_handler.hpp
microservices/mcmc-service/src/core/: chain_diagnostics.cpp  chain_diagnostics.hpp  mcmc_engine.cpp  mcmc_engine.hpp
microservices/mcmc-service/src/core/samplers/: arms_sampler.cpp  gibbs_sampler.cpp  metropolis_hastings.cpp  slice_sampler.cpp
microservices/mcmc-service/src/models/: chain_manager.cpp  chain_manager.hpp
microservices/mcmc-service/src/utils/: distribution_parser.cpp  distribution_parser.hpp
microservices/mixture-models-service/: CMakeLists.txt  Dockerfile  README.md
microservices/mixture-models-service/src/: main.cpp
microservices/mixture-models-service/src/api/: mixture_handler.cpp  mixture_handler.hpp
microservices/mixture-models-service/src/core/models/: dirichlet_process.cpp  dirichlet_process.hpp  gaussian_mixture.cpp  gaussian_mixture.hpp  hierarchical_dp.cpp  hierarchical_dp.hpp  mixture_base.cpp  mixture_base.hpp
microservices/mixture-models-service/src/core/samplers/: collapsed_gibbs.cpp  collapsed_gibbs.hpp  gibbs_sampler.cpp  gibbs_sampler.hpp
microservices/mixture-models-service/src/utils/: clustering_utils.cpp  clustering_utils.hpp
microservices/optimization-service/: CMakeLists.txt  Dockerfile  README.md
microservices/optimization-service/src/: main.cpp
microservices/optimization-service/src/api/: optimization_handler.cpp  optimization_handler.hpp
microservices/optimization-service/src/core/: optimization_engine.cpp  optimization_engine.hpp
microservices/optimization-service/src/core/optimizers/: bfgs_optimizer.cpp  nelder_mead_optimizer.cpp  newton_optimizer.cpp  powell_optimizer.cpp  simulated_annealing.cpp
microservices/optimization-service/src/models/: job_manager.cpp  job_manager.hpp
microservices/optimization-service/src/utils/: function_parser.cpp  function_parser.hpp
microservices/rng-service/: CMakeLists.txt  Dockerfile  README.md
microservices/rng-service/src/: main.cpp
microservices/rng-service/src/api/: rng_handler.cpp  rng_handler.hpp
microservices/rng-service/src/core/: distribution_factory.cpp  rng_engine.cpp  rng_engine.hpp
microservices/rng-service/src/utils/: json_utils.cpp  json_utils.hpp
microservices/special-functions-service/: CMakeLists.txt  Dockerfile  README.md
microservices/special-functions-service/src/: main.cpp
microservices/special-functions-service/src/api/: special_functions_handler.cpp  special_functions_handler.hpp
microservices/special-functions-service/src/core/: bessel_functions.cpp  bessel_functions.hpp  beta_functions.cpp  beta_functions.hpp  elliptic_functions.cpp  elliptic_functions.hpp  fft_calculator.cpp  fft_calculator.hpp  gamma_functions.cpp  gamma_functions.hpp  hypergeometric_functions.cpp  hypergeometric_functions.hpp  polygamma_functions.cpp  polygamma_functions.hpp
microservices/special-functions-service/src/utils/: numeric_utils.cpp  numeric_utils.hpp
microservices/statistical-models-service/: CMakeLists.txt  Dockerfile  README.md
microservices/statistical-models-service/src/: main.cpp
microservices/statistical-models-service/src/api/: models_handler.cpp  models_handler.hpp
microservices/statistical-models-service/src/core/: model_factory.cpp  model_factory.hpp
microservices/statistical-models-service/src/core/estimation/: bayesian_estimator.cpp  bayesian_estimator.hpp  mle_estimator.cpp  mle_estimator.hpp
microservices/statistical-models-service/src/core/models/: beta_model.cpp  beta_model.hpp  gamma_model.cpp  gamma_model.hpp  model_base.cpp  (+7 more)
microservices/statistical-models-service/src/utils/: data_validator.cpp  data_validator.hpp  statistics_utils.cpp  statistics_utils.hpp
microservices/statistical-utilities-service/: CMakeLists.txt  Dockerfile  README.md
microservices/statistical-utilities-service/src/: main.cpp
microservices/statistical-utilities-service/src/api/: stats_handler.cpp  stats_handler.hpp
microservices/statistical-utilities-service/src/core/: correlation_analysis.cpp  correlation_analysis.hpp  descriptive_stats.cpp  descriptive_stats.hpp  distribution_fitting.cpp  distribution_fitting.hpp  hypothesis_tests.cpp  hypothesis_tests.hpp  multivariate_analysis.cpp  multivariate_analysis.hpp  resampling_methods.cpp  resampling_methods.hpp  time_series_analysis.cpp  time_series_analysis.hpp
microservices/statistical-utilities-service/src/utils/: data_transformer.cpp  data_transformer.hpp
microservices/time-series-service/: CMakeLists.txt  Dockerfile  README.md
microservices/time-series-service/src/: main.cpp
microservices/time-series-service/src/api/: ts_handler.cpp  ts_handler.hpp
microservices/time-series-service/src/utils/: time_series_utils.cpp  time_series_utils.hpp
(+15 files in other folders)
